--- a/src/pages/dashBoard/dashboard.css
+++ b/src/pages/dashBoard/dashboard.css
@@ -3,16 +3,32 @@
 }
 
 .dashboard fieldset div {
-    margin: 0;
+    /* margin: 0; */
 }
 
 .dashboard fieldset{
-    width: max-content;
-    height: max-content;
-    box-shadow: var(--box-shadow-light);
+    /* width: max-content; */
+    /* height: max-content; */
+    /* box-shadow: var(--box-shadow-light); */
 }
 
 .chart{
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
+ */}
+
+ /* .apexcharts-legend.apx-legend-position-bottom, .apexcharts-legend.apx-legend-position-top{
+
+background-color: blue;
+display: flex;
+flex-direction: row;
+flex-wrap: nowrap;
+} */
+
+.apexcharts-legend.apx-legend-position-bottom .apexcharts-legend-series, .apexcharts-legend.apx-legend-position-top .apexcharts-legend-series{
+    display: flex;
+    /* align-items: center; */
+    flex-direction: row;
+    width: min-content;
 }
+
